--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>Document</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <script type="text/javascript" src="script/script.js"></script>
   </head>
   <body>
     <div class="header">
@@ -33,16 +35,18 @@
       <div class="container cont01">
         <div>
           <div>
-            <h3 class="tit">문화를 만들고 인재를 키우고</h3>
-            <h3 class="tit">마음을 나눕니다</h3>
-            <div class="sub-area"></div>
+            <h3 class="tit">
+              문화를 만들고 인재를 키우고<br />
+              마음을 나눕니다
+            </h3>
+            <!-- <div class="sub-area"></div> -->
           </div>
           <div class="cont01-02">
             <p class="txt1">
               넷마블문화재단은 문화적 가치 확산을 통해 우리 사회의 미래 경쟁력을
-              높여 가고자
+              높여 가고자<br />
+              다양한 공익 활동을 전개해 나가고 있습니다.
             </p>
-            <p class="txt1">다양한 공익 활동을 전개해 나가고 있습니다.</p>
           </div>
         </div>
       </div>
@@ -88,6 +92,18 @@
             </p>
           </div>
         </div>
+      </div>
+      <div class="container cont03">
+        <div class="cont03-01">
+          <h4 class="tit">우리는 <b>문화적 가치를 확산</b>하여 우리 사회의</h4>
+          <h4 class="tit">미래 경쟁력을 높여갑니다</h4>
+          <p class="tit2">주요목적</p>
+        </div>
+        <div class="cont03-02"></div>
+      </div>
+      <div class="container cont04">
+        <h3 class="tit">재단소식</h3>
+        <!-- <div class="sub-area"></div> -->
       </div>
     </div>
   </body>
